2000-11-12  Gary Houston  <ghouston@arglist.com>

	* fports.c (scm_open_file): fix the 'b' option.  Thanks
	to George Caswell.

2000-11-09  Gary Houston  <ghouston@arglist.com>

	* ports.c, ports.h (scm_close_all_ports_except): deprecated.
	use port-for-each.  Updated its docstring.

2000-11-07  Gary Houston  <ghouston@arglist.com>

	* ports.c (scm_port_for_each): new proc.  implements port-for-each,
	which applies a procedure to each port in the port table.
	ports.h: declare scm_port_for_each.

	* ioext.c (scm_dup2): new proc.  implements "dup2" which is a simple
	wrapper for the dup2 system call (unlike dup->fdes or
	primitive-move->fdes).
	* ioext.h: declare scm_dup2.

	* filesys.c (scm_close_fdes): new proc.  implements "close-fdes"
	which is a simple wrapper for close system call (unlike scm_close).
	* filesys.h: declare for scm_close_fdes.

2000-11-06  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* eval.c (SCM_IM_DISPATCH), objects.c (scm_mcache_lookup_cmethod):
	Count n_specialized + 1 turns before letting a match through.

	* goops.c (scm_sys_invalidate_method_cache_x): Don't convert
	scm_si_n_specialized from fixnum and don't take absolute value.
	(Thanks to Lars J. Aas.)

2000-11-04  Gary Houston  <ghouston@arglist.com>

	* ports.c (scm_port_p): new function, implements "port?" which
	is mentioned in R5RS.
	* ports.h: declare scm_port_p.

2000-11-01  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* backtrace.c (display_expression, display_error_body), fports.c
	(prinfport), print.c (scm_iprin1):  Test for symbols and strings
	explicitly instead of using SCM_ROSTRINGP.

	* backtrace.c (scm_display_error_message):  Don't pass a symbol to
	scm_simple_format.  Prefer high-level output functions.

	(display_error_body):  When displaying procedure names, give
	preference to the name passed as a parameter.  Only if none is
	given extract a name from the stack information.

	* fports.c (scm_fdes_to_port, prinfport), gc.c (scm_gc_mark),